# rust-wasm-vite-vue3

./: package-lock.json  package.json  vite.config.ts
rustmain/: Cargo.toml
rustmain/src/: hello.rs  lib.rs  universe.rs  webgl.rs
src/: App.tsx  app.styl
